# scrapetable

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  scrapetable.py  scrapetable.yaml
locale/el/: messages.po
locale/en/: messages.po
locale/templates/: messages.pot
tests/: test_fetch.py  test_render.py
